@@ -9,6 +9,7 @@ import com.sbg.bdd.screenplay.wiremock.CorrelationPath;
 import com.sbg.bdd.screenplay.wiremock.WireMockScreenplayContext;
 import com.sbg.bdd.wiremock.scoped.integration.DependencyInjectionAdaptorFactory;
 import com.sbg.bdd.wiremock.scoped.integration.HeaderName;
+import com.sbg.bdd.wiremock.scoped.integration.URLHelper;
 import com.sbg.bdd.wiremock.scoped.integration.WireMockCorrelationState;
 import com.sbg.bdd.wiremock.scoped.recording.RecordingWireMockClient;
 import com.sbg.bdd.wiremock.scoped.recording.builders.ExtendedMappingBuilder;
@@ -20,7 +21,9 @@ import io.restassured.response.Response;
 import io.restassured.specification.FilterableRequestSpecification;
 import io.restassured.specification.FilterableResponseSpecification;
 
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URL;
 import java.util.Map;
 
 import static com.sbg.bdd.screenplay.core.actors.OnStage.theActorInTheSpotlight;
@@ -29,16 +32,25 @@ public class CorrelationFilter implements Filter {
 
     @Override
     public Response filter(FilterableRequestSpecification requestSpecification, FilterableResponseSpecification responseSpec, FilterContext filterContext) {
+        WireMockCorrelationState currentCorrelationState = DependencyInjectionAdaptorFactory.getAdaptor().getCurrentCorrelationState();
         RecordingWireMockClient wm = OnStage.performance().recall(WireMockScreenplayContext.RECORDING_WIRE_MOCK_CLIENT);
         StubMapping mapping = buildProxyMapping(URI.create(requestSpecification.getURI()));
         wm.register(mapping);
-        propagateCorrelationState(requestSpecification);
-        String redirectedPath = wm.baseUrl() + URI.create(requestSpecification.getURI()).getPath();
+        propagateCorrelationState(requestSpecification, currentCorrelationState);
+        String redirectedPath = redirectedPath(requestSpecification, currentCorrelationState);
         Response response = filterContext.next(requestSpecification.path(redirectedPath), responseSpec);
         wm.removeStubMapping(mapping);
         syncLocalCorrelationState(response);
         return response;
 
+    }
+
+    private String redirectedPath(FilterableRequestSpecification requestSpecification, WireMockCorrelationState currentCorrelationState) {
+        try {
+            return URLHelper.replaceBaseUrl(URI.create(requestSpecification.getURI()).toURL(), currentCorrelationState.getWireMockBaseUrl()).toExternalForm();
+        } catch (MalformedURLException e) {
+            throw new IllegalStateException(e);
+        }
     }
 
     private StubMapping buildProxyMapping(URI uri) {
@@ -49,23 +61,32 @@ public class CorrelationFilter implements Filter {
         return builder.build();
     }
 
-    private void propagateCorrelationState(FilterableRequestSpecification requestSpecification) {
+    private void propagateCorrelationState(FilterableRequestSpecification requestSpecification, WireMockCorrelationState currentCorrelationState) {
         requestSpecification.header(HeaderName.ofTheCorrelationKey(), CorrelationPath.of(theActorInTheSpotlight()));
-        WireMockCorrelationState currentCorrelationState = DependencyInjectionAdaptorFactory.getAdaptor().getCurrentCorrelationState();
         if (currentCorrelationState.isSet()) {
-            String key = URI.create(requestSpecification.getURI()) + requestSpecification.getMethod();
-            requestSpecification
-                    .header(HeaderName.ofTheCorrelationKey(), currentCorrelationState.getCorrelationPath())
-                    .header(HeaderName.ofTheSequenceNumber(), currentCorrelationState.getNextSequenceNumberFor(key).toString());
-            if (currentCorrelationState.shouldProxyUnmappedEndpoints()) {
-                requestSpecification.header(HeaderName.toProxyUnmappedEndpoints(), "true");
-            }
-            for (Map.Entry<String, Integer> entry : currentCorrelationState.getSequenceNumbers().entrySet()) {
-                requestSpecification.header(HeaderName.ofTheServiceInvocationCount(), entry.getKey() + "|" + entry.getValue());
+            try {
+                URL originalUrl = new URL(requestSpecification.getURI());
+                String key = URLHelper.identifier(originalUrl, requestSpecification.getMethod());
+                String sequenceNumber = currentCorrelationState.getNextSequenceNumberFor(key).toString();
+
+
+                requestSpecification
+                        .header(HeaderName.ofTheOriginalUrl(), new URL(URLHelper.identifier(originalUrl)).toExternalForm())
+                        .header(HeaderName.ofTheCorrelationKey(), currentCorrelationState.getCorrelationPath())
+                        .header(HeaderName.ofTheSequenceNumber(), sequenceNumber);
+                if (currentCorrelationState.shouldProxyUnmappedEndpoints()) {
+                    requestSpecification.header(HeaderName.toProxyUnmappedEndpoints(), "true");
+                }
+                for (Map.Entry<String, Integer> entry : currentCorrelationState.getSequenceNumbers().entrySet()) {
+                    requestSpecification.header(HeaderName.ofTheServiceInvocationCount(), entry.getKey() + "|" + entry.getValue());
+                }
+            } catch (MalformedURLException e) {
+                throw new IllegalStateException(e);
             }
         }
 
     }
+
 
     private void syncLocalCorrelationState(Response response) {
         WireMockCorrelationState currentCorrelationState = DependencyInjectionAdaptorFactory.getAdaptor().getCurrentCorrelationState();
